```mermaid
erDiagram
    USERS {
        integer id PK
        varchar username UK
        varchar email UK
        varchar password
        varchar role "admin|doctor|patient"
        varchar first_name
        varchar last_name
        varchar status "active|inactive|pending"
        boolean email_verified
        datetime created_at
        datetime updated_at
    }

    PATIENTS {
        integer id PK
        integer user_id FK
        varchar phone
        date date_of_birth
        varchar gender "male|female|other"
        text address
        varchar blood_type
        text allergies
        text medical_history
        varchar emergency_contact_name
        varchar emergency_contact_phone
        varchar emergency_contact_relationship
        varchar status "active|inactive"
        datetime created_at
    }

    DOCTORS {
        integer id PK
        integer user_id FK
        varchar specialty
        varchar license_number UK
        text biography
        decimal consultation_fee
        integer experience_years
        text education
        text office_address
        varchar available_days
        varchar available_hours
        boolean is_available
        datetime created_at
        datetime updated_at
    }

    APPOINTMENTS {
        integer id PK
        integer patient_id FK
        integer doctor_id FK
        date appointment_date
        time appointment_time
        integer duration
        text reason_for_visit
        varchar status "pending|rescheduled|scheduled|completed|cancelled|no_show"
        text notes
        text patient_info
        datetime created_at
        datetime updated_at
    }

    DOCTOR_SCHEDULES {
        integer id PK
        integer doctor_id FK
        tinyint day_of_week "0=Sunday to 6=Saturday"
        time start_time
        time end_time
        integer slot_duration
        boolean is_available
        datetime created_at
        datetime updated_at
    }

    DOCTOR_BREAKS {
        integer id PK
        integer doctor_id FK
        date break_date
        time start_time
        time end_time
        varchar reason
        datetime created_at
    }

    DOCTOR_UNAVAILABLE {
        integer id PK
        integer doctor_id FK
        date unavailable_date
        varchar reason
        datetime created_at
    }

    REVIEWS {
        integer id PK
        integer patient_id FK
        integer doctor_id FK
        integer appointment_id FK
        integer rating "1-5"
        text review_text
        boolean is_anonymous
        boolean is_approved
        datetime created_at
        datetime updated_at
    }

    NOTIFICATIONS {
        integer id PK
        integer user_id FK
        varchar title
        text message
        varchar type "info|success|warning|error"
        boolean is_read
        datetime created_at
    }

    ACTIVITY_LOGS {
        integer id PK
        integer user_id FK
        varchar activity_type
        text description
        varchar ip_address
        text user_agent
        datetime created_at
    }

    CLINIC_SETTINGS {
        integer id PK
        varchar setting_key UK
        text setting_value
        text description
        datetime created_at
        datetime updated_at
    }

    LAB_OFFERS {
        integer id PK
        varchar name
        text description
        decimal price
        boolean is_active
        datetime created_at
    }

    LAB_OFFER_DOCTORS {
        integer id PK
        integer lab_offer_id FK
        integer doctor_id FK
        datetime created_at
    }

    %% Primary Relationships
    USERS ||--|| PATIENTS : "user_id"
    USERS ||--|| DOCTORS : "user_id"
    
    %% Appointment Relationships
    PATIENTS ||--o{ APPOINTMENTS : "patient_id"
    DOCTORS ||--o{ APPOINTMENTS : "doctor_id"
    
    %% Schedule Relationships
    DOCTORS ||--o{ DOCTOR_SCHEDULES : "doctor_id"
    DOCTORS ||--o{ DOCTOR_BREAKS : "doctor_id"
    DOCTORS ||--o{ DOCTOR_UNAVAILABLE : "doctor_id"
    
    %% Review System
    USERS ||--o{ REVIEWS : "patient_id"
    DOCTORS ||--o{ REVIEWS : "doctor_id"
    APPOINTMENTS ||--o| REVIEWS : "appointment_id"
    
    %% System Logs & Notifications
    USERS ||--o{ NOTIFICATIONS : "user_id"
    USERS ||--o{ ACTIVITY_LOGS : "user_id"
    
    %% Lab Services
    LAB_OFFERS ||--o{ LAB_OFFER_DOCTORS : "lab_offer_id"
    DOCTORS ||--o{ LAB_OFFER_DOCTORS : "doctor_id"
```